docs/envoy/v1.10.0/_sources/api-v2/admin/v2alpha/certs.proto.rst.txt
.. _envoy_api_file_envoy/admin/v2alpha/certs.proto:

Certificates
============


.. _envoy_api_msg_admin.v2alpha.Certificates:

admin.v2alpha.Certificates
--------------------------

`[admin.v2alpha.Certificates proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/admin/v2alpha/certs.proto#L15>`_

Proto representation of certificate details. Admin endpoint uses this wrapper for `/certs` to
display certificate information. See :ref:`/certs <operations_admin_interface_certs>` for more
information.

.. code-block:: json

  {
    "certificates": []
  }

.. _envoy_api_field_admin.v2alpha.Certificates.certificates:

certificates
  (:ref:`admin.v2alpha.Certificate <envoy_api_msg_admin.v2alpha.Certificate>`) List of certificates known to an Envoy.
  
  


.. _envoy_api_msg_admin.v2alpha.Certificate:

admin.v2alpha.Certificate
-------------------------

`[admin.v2alpha.Certificate proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/admin/v2alpha/certs.proto#L20>`_


.. code-block:: json

  {
    "ca_cert": [],
    "cert_chain": []
  }

.. _envoy_api_field_admin.v2alpha.Certificate.ca_cert:

ca_cert
  (:ref:`admin.v2alpha.CertificateDetails <envoy_api_msg_admin.v2alpha.CertificateDetails>`) Details of CA certificate.
  
  
.. _envoy_api_field_admin.v2alpha.Certificate.cert_chain:

cert_chain
  (:ref:`admin.v2alpha.CertificateDetails <envoy_api_msg_admin.v2alpha.CertificateDetails>`) Details of Certificate Chain
  
  


.. _envoy_api_msg_admin.v2alpha.CertificateDetails:

admin.v2alpha.CertificateDetails
--------------------------------

`[admin.v2alpha.CertificateDetails proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/admin/v2alpha/certs.proto#L29>`_


.. code-block:: json

  {
    "path": "...",
    "serial_number": "...",
    "subject_alt_names": [],
    "days_until_expiration": "...",
    "valid_from": "{...}",
    "expiration_time": "{...}"
  }

.. _envoy_api_field_admin.v2alpha.CertificateDetails.path:

path
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Path of the certificate.
  
  
.. _envoy_api_field_admin.v2alpha.CertificateDetails.serial_number:

serial_number
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Certificate Serial Number.
  
  
.. _envoy_api_field_admin.v2alpha.CertificateDetails.subject_alt_names:

subject_alt_names
  (:ref:`admin.v2alpha.SubjectAlternateName <envoy_api_msg_admin.v2alpha.SubjectAlternateName>`) List of Subject Alternate names.
  
  
.. _envoy_api_field_admin.v2alpha.CertificateDetails.days_until_expiration:

days_until_expiration
  (`uint64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Minimum of days until expiration of certificate and it's chain.
  
  
.. _envoy_api_field_admin.v2alpha.CertificateDetails.valid_from:

valid_from
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) Indicates the time from which the certificate is valid.
  
  
.. _envoy_api_field_admin.v2alpha.CertificateDetails.expiration_time:

expiration_time
  (`Timestamp <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#timestamp>`_) Indicates the time at which the certificate expires.
  
  


.. _envoy_api_msg_admin.v2alpha.SubjectAlternateName:

admin.v2alpha.SubjectAlternateName
----------------------------------

`[admin.v2alpha.SubjectAlternateName proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/admin/v2alpha/certs.proto#L49>`_


.. code-block:: json

  {
    "dns": "...",
    "uri": "..."
  }

.. _envoy_api_field_admin.v2alpha.SubjectAlternateName.dns:

dns
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) 
  Subject Alternate Name.
  
  
  Only one of :ref:`dns <envoy_api_field_admin.v2alpha.SubjectAlternateName.dns>`, :ref:`uri <envoy_api_field_admin.v2alpha.SubjectAlternateName.uri>` may be set.
  
.. _envoy_api_field_admin.v2alpha.SubjectAlternateName.uri:

uri
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) 
  Subject Alternate Name.
  
  
  Only one of :ref:`dns <envoy_api_field_admin.v2alpha.SubjectAlternateName.dns>`, :ref:`uri <envoy_api_field_admin.v2alpha.SubjectAlternateName.uri>` may be set.
  

